Changed materialize.css version and fixed broken UI

--- a/style.css
+++ b/style.css
@@ -37,14 +37,3 @@ svg {
 	border-radius: 5px;
 	margin-top: 5px;
 }
-
-.flex {
-	display: flex;
-	flex: wrap;
-}
-
-.input-field p, .input-field .select-wrapper {
-  display: inline-block;
-  clear: both;
-  float: none;
-}
